fixed heading alignment again, took off padding

--- a/styles_Songs.css
+++ b/styles_Songs.css
@@ -12,7 +12,6 @@ body {
 
 h1 {
   font-family:Calibri, Arial, sans-serif;
-  padding-left: 20px;
   font-size: 90px;
 }
 
